--- a/src/client/components/Auth/Auth.scss
+++ b/src/client/components/Auth/Auth.scss
@@ -1,12 +1,45 @@
-.auth-container {
-  width: 50%;
-  margin: 50px auto;
+.login-form, .signup-form {
+  font-size: 1.2rem;
+  width: 30%;
+  margin: 20px auto;
+  padding: 30px;
+  line-height: 50px;
 
-  .login-form {
+  input {
+    display: block;
+    width: 100%;
+    font-size: 1rem;
+    border: none;
+    padding: 5px;
+    border: 1px solid #ababab;
+    border-radius: 3px;
+  }
 
-    .login-button {
-      width: 100%;
-    }
+  button {
+    width: 100%;
+    font-size: 1rem;
+    border: none;
+    border-radius: 5px;
+    background: rgb(224, 48, 77);
+    cursor: pointer;
+    padding: 5px 10px;
+    color: white;
+    margin-top: 20px;
+  }
 
+  .link {
+    color: rgb(224, 48, 77);
+  }
+}
+
+@media (max-width: 425px) {
+  .login-form, .signup-form {
+    width: 90%;
+  }
+}
+
+@media (min-width: 426px) and (max-width: 769px) {
+  .login-form, .signup-form {
+    width: 50%;
   }
 }
